--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   
   "name": "sajid-hussain-portfolio",
+  "homepage": "https://github.com/shaiksajidhussain/personal_portfolio",
   
   "version": "0.1.0",
   
