--- a/package.json
+++ b/package.json
@@ -1,914 +1,307 @@
 {
-  
-
-
-
-
-
-
-
-"name": "your-portfolio",
-  
-
-
-
-
-
-
-
-"version": "0.1.0",
-  
-
-
-
-
-
-
-
-"private": true,
-  
-
-
-
-
-
-
-
-"dependencies": {
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"@emailjs/browser": "^4.4.1",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"@emotion/react": "^11.13.3",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"@emotion/styled": "^11.13.0",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"@mui/icons-material": "^6.1.2",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"@mui/lab": "^6.0.0-beta.10",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"@mui/material": "^6.1.2",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"@react-three/fiber": "^8.17.9",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"@testing-library/jest-dom": "^5.16.4",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"@testing-library/react": "^13.3.0",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"@testing-library/user-event": "^13.5.0",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"aos": "^2.3.4",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"gsap": "^3.11.4",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"react": "^18.2.0",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"react-dom": "^18.2.0",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"react-icons": "^4.4.0",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"react-router-dom": "^6.3.0",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"react-scripts": "5.0.1",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"styled-components": "^5.3.5",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"three": "^0.148.0",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"typewriter-effect": "^2.21.0",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"web-vitals": "^2.1.4"
-  
-
-
-
-
-
-
-
-},
-  
-
-
-
-
-
-
-
-"scripts": {
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"start": "react-scripts start",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"build": "react-scripts build",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"test": "react-scripts test",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"eject": "react-scripts eject"
-  
-
-
-
-
-
-
-
-},
-  
-
-
-
-
-
-
-
-"eslintConfig": {
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"extends": [
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"react-app",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"react-app/jest"
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-]
-  
-
-
-
-
-
-
-
-},
-  
-
-
-
-
-
-
-
-"browserslist": {
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"production": [
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-">0.2%",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"not dead",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"not op_mini all"
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-],
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"development": [
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"last 1 chrome version",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"last 1 firefox version",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"last 1 safari version"
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-]
-  
-
-
-
-
-
-
-
-},
-  
-
-
-
-
-
-
-
-"devDependencies": {
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"autoprefixer": "^10.4.20",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"gh-pages": "^5.0.0",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"postcss": "^8.4.47",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"tailwindcss": "^3.4.13"
-  
-
-
-
-
-
-
-
-}
+  
+
+"name": "your-portfolio",
+  
+
+"version": "0.1.0",
+  
+
+"private": true,
+  
+
+"dependencies": {
+  
+
+  
+
+"@emailjs/browser": "^4.4.1",
+  
+
+  
+
+"@emotion/react": "^11.13.3",
+  
+
+  
+
+"@emotion/styled": "^11.13.0",
+  
+
+  
+
+"@mui/icons-material": "^6.1.2",
+  
+
+  
+
+"@mui/lab": "^6.0.0-beta.10",
+  
+
+  
+
+"@mui/material": "^6.1.2",
+  
+
+  
+
+"@react-three/fiber": "^8.17.9",
+  
+
+  
+
+"@testing-library/jest-dom": "^5.16.4",
+  
+
+  
+
+"@testing-library/react": "^13.3.0",
+  
+
+  
+
+"@testing-library/user-event": "^13.5.0",
+  
+
+  
+
+"aos": "^2.3.4",
+  
+
+  
+
+"cors": "^2.8.5",
+  
+
+  
+
+"dotenv": "^16.4.7",
+  
+
+  
+
+"express": "^4.21.2",
+  
+
+  
+
+"gsap": "^3.11.4",
+  
+
+  
+
+"mongoose": "^8.9.2",
+  
+
+  
+
+"react": "^18.2.0",
+  
+
+  
+
+"react-dom": "^18.2.0",
+  
+
+  
+
+"react-icons": "^4.4.0",
+  
+
+  
+
+"react-router-dom": "^6.3.0",
+  
+
+  
+
+"react-scripts": "5.0.1",
+  
+
+  
+
+"styled-components": "^5.3.5",
+  
+
+  
+
+"three": "^0.148.0",
+  
+
+  
+
+"typewriter-effect": "^2.21.0",
+  
+
+  
+
+"web-vitals": "^2.1.4"
+  
+
+},
+  
+
+"scripts": {
+  
+
+  
+
+"start": "react-scripts start",
+  
+
+  
+
+"build": "react-scripts build",
+  
+
+  
+
+"test": "react-scripts test",
+  
+
+  
+
+"eject": "react-scripts eject"
+  
+
+},
+  
+
+"eslintConfig": {
+  
+
+  
+
+"extends": [
+  
+
+  
+
+  
+
+"react-app",
+  
+
+  
+
+  
+
+"react-app/jest"
+  
+
+  
+
+]
+  
+
+},
+  
+
+"browserslist": {
+  
+
+  
+
+"production": [
+  
+
+  
+
+  
+
+">0.2%",
+  
+
+  
+
+  
+
+"not dead",
+  
+
+  
+
+  
+
+"not op_mini all"
+  
+
+  
+
+],
+  
+
+  
+
+"development": [
+  
+
+  
+
+  
+
+"last 1 chrome version",
+  
+
+  
+
+  
+
+"last 1 firefox version",
+  
+
+  
+
+  
+
+"last 1 safari version"
+  
+
+  
+
+]
+  
+
+},
+  
+
+"devDependencies": {
+  
+
+  
+
+"autoprefixer": "^10.4.20",
+  
+
+  
+
+"gh-pages": "^5.0.0",
+  
+
+  
+
+"postcss": "^8.4.47",
+  
+
+  
+
+"tailwindcss": "^3.4.13"
+  
+
+},
+  
+
+"description": "Overview\r <h2>This project is my personal portfolio website built using React JS. It serves as a showcase of my skills, projects, and experiences.</h2>\r Features\r <h2>1. Home Page</h2>\r <p>The home page provides a brief introduction about me and my areas of expertise.</p>\r <h2>2. Projects</h2>\r <p>This section showcases my projects, including descriptions, screenshots, and links to their repositories or live demos.</p>\r <h2>3. Skills</h2>\r <p>Here, I list the various programming languages, frameworks, and tools I am proficient in.</p>\r <h2>4. Experience</h2>\r <p>I highlight my work experiences and relevant accomplishments in this section.</p>\r <h2>5. Contact</h2>\r <p>Users can reach out to me using the contact form provided on this page.</p>\r Installation\r To run this portfolio website locally, follow these steps:",
+  
+
+"main": "postcss.config.js",
+  
+
+"keywords": [],
+  
+
+"author": "",
+  
+
+"license": "ISC"
 }
